fix: temporarily removed flex-wrap property until turn rules are styled, after master merge, caused overflow and blank page

--- a/public/stylesheet/style.css
+++ b/public/stylesheet/style.css
@@ -59,7 +59,6 @@ button:focus {
 .parent-form {
     display: flex;
     flex-direction: row;
-    flex-wrap: wrap;
     height: 100vh;
     position: relative;
 }
